// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectValue accepts and applies style from \`styles\` prop 1`] = `
.emotion-0 {
  color: blue;
}

<span
  className="emotion-0"
>
  ""
</span>
`;

exports[`ObjectValue should render 1`] = `
.emotion-0 {
  color: rgb(28, 0, 207);
}

<span
  className="emotion-0"
>
  0
</span>
`;
